<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/rounded_corners40"
    android:elevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/main_navbar_home"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/home"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/main_navbar_like"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/liked"
        app:srcCompat="@drawable/heart" />

    <ImageButton
        android:id="@+id/main_navbar_admin"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:contentDescription="@string/acc"
        app:srcCompat="@drawable/admin" />

    <ImageButton
        android:id="@+id/main_theme_switch"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:contentDescription="@string/theme"
        app:srcCompat="@drawable/sun_and_moon" />

</LinearLayout>