<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/likes_recycler_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:elevation="5dp"
    android:orientation="horizontal"
    android:background="@drawable/white_foreground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/likes_recycler_item_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="24sp"
            android:autoSizeMinTextSize="14sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="5dp"
            android:textColor="?attr/colorSecondary"
            android:text="Название" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/likes_img_time"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/clocks" />

        <TextView
            android:id="@+id/likes_recycler_item_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textColor="?attr/colorSecondary"
            android:text="@string/recepie_time" />

        <ImageView
            android:id="@+id/likes_img_kcal"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/kcal" />

        <TextView
            android:id="@+id/likes_recycler_item_kcal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/recepie_kall" />

        <ImageView
            android:id="@+id/likes_img_serv"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/servs" />

        <TextView
            android:id="@+id/likes_recycler_item_serv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/recepie_serve" />
    </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/likes_recycler_item_like"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/heart_red" />



</LinearLayout>